# beatrice

./: .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  playwright.config.ts  run.sh  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  pages.yml
crates/beatrice-dsp/: Cargo.toml
crates/beatrice-dsp/pkg/: beatrice_dsp.d.ts  beatrice_dsp.js  beatrice_dsp_bg.wasm  beatrice_dsp_bg.wasm.d.ts  package.json
crates/beatrice-dsp/src/: features.rs  ingest.rs  lib.rs  streaming.rs
crates/beatrice-dsp/src/events/: avp_factory_model.json  calibration.rs  gaussian.rs  heuristic.rs  hybrid.rs  mod.rs  types.rs
crates/beatrice-dsp/tests/: offline_freeze.rs  streaming_tolerance.rs
crates/beatrice-dsp/tests/golden/: test-8bar-progression.json  test-hihat.json  test-hum.json  test-kick.json  test-offgrid.json  test-pattern.json  test-snare.json
docs/: avp-results-2026-07-15.md  demo-script.md  evaluation-2026-07-13.md  latency.md  market-research-2026-07-13.md
docs/superpowers/plans/: 2026-07-13-phase-1-harden.md
docs/superpowers/specs/: 2026-07-13-beatrice-v2-design.md
e2e/: jam.spec.ts  smoke.spec.ts  themeSound.spec.ts
scripts/: demo-walk.mjs  generate-test-audio.mjs  measure-latency.mjs
src/: App.tsx  JamSpike.tsx  bindings.ts  ipc-mock-parity.test.ts  main.tsx  scaffolding.test.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs
src-tauri/src/arranger/: drum_lanes.rs  midi.rs  mod.rs  phrase.rs  templates.rs
src-tauri/src/audio/: features.rs  ingest.rs  mod.rs  recording.rs
src-tauri/src/events/: backend.rs  calibration.rs  explainability.rs  heuristic.rs  mod.rs  types.rs
src-tauri/src/groove/: grid.rs  mod.rs  quantize.rs  tempo.rs
src-tauri/src/pipeline/: mod.rs  trace.rs
src-tauri/src/render/: effects.rs  mixer.rs  mod.rs  synth.rs
src-tauri/src/state/: db.rs  mod.rs  models.rs  queries.rs  storage.rs
src-tauri/src/themes/: blade_runner.rs  mod.rs  stranger_things.rs  types.rs
src-tauri/tests/: groove_faithfulness.rs  pipeline_integration.rs
src/audio/: audioFeatures.test.ts  audioFeatures.ts  renderWav.test.ts  renderWav.ts  scheduleArrangement.ts  themeSound.test.ts  timbre.test.ts  timbre.ts
src/components/: BEmphasisSlider.tsx  BeatMarkers.tsx  DemoButton.tsx  ExportControls.tsx  PlaybackControls.tsx  SessionSidebar.tsx  Waveform.tsx
src/components/AudioInput/: Calibration.tsx  DropZone.tsx  Recorder.tsx
src/components/Explainability/: ArrangementLanes.tsx  DecisionCard.test.tsx  DecisionCard.tsx  ModelInspector.tsx  README.md  Timeline.test.tsx  Timeline.tsx  VISUAL_GUIDE.md  index.ts
src/components/Groove/: FidelitySlider.tsx  GrooveControls.tsx
src/components/Jam/: CalibrationPanel.tsx  JamScreen.tsx  calibrationMachine.test.ts  calibrationMachine.ts
src/components/Theme/: ThemeSelector.tsx  index.ts
src/components/Visualization/: AudioScene.tsx  EventPillars.tsx  ParticleField.tsx  ProcessingIndicator.tsx  ReactiveGeometry.tsx
src/hooks/: calibrationStore.test.ts  calibrationStore.ts  jamBuffer.test.ts  jamBuffer.ts  recorderMime.test.ts  recorderMime.ts  useAudioPlayback.ts  useAudioRecorder.test.ts  useAudioRecorder.ts  useJamSession.ts  useProjects.ts
src/store/: useStore.ts
src/styles/: brutalist.css  index.css
src/types/: explainability.ts  ipc.ts  visualization.ts
src/utils/: tauri-mock.ts  themeTemplate.test.ts  themeTemplate.ts
src/worklet/: audioworklet.d.ts  detector.worklet.ts  loadDetector.ts  textcodec-polyfill.ts
tests/e2e/: app.spec.ts
training/: .gitignore  README.md  pyproject.toml
training/beatrice_ml/: ablate.py  baseline.py  evaluate.py  frontend.py  manifest.py  model.py  patches.py  prototypes.py  smoke.py  train.py
training/configs/: avplvt_v1.yaml
training/infra/: README.md  bootstrap.sh  launch.sh  logs.sh  status.sh  terminate.sh
training/splits/: avplvt_v1.json
training/tests/: conftest.py  test_baseline.py  test_frontend.py  test_gate.py  test_manifest.py  test_model.py  test_patches.py  test_prototypes.py  test_splits.py
training/tools/: build_manifest.py  verify_dataset.py
