[package]
name = "beatrice"
version = "0.1.0"
description = "Beatbox to synth beat generator"
authors = ["Bobby Rathore"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "beatrice_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9", features = ["specta"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"

# Typed IPC bindings (tauri-specta)
# NOTE (Task 0 spike): the plan called for specta/tauri-specta =2.0.0-rc.25 +
# specta-typescript 0.0.12, but specta rc.24/rc.25 (edition 2024) use the
# still-unstable `std::fmt::from_fn` (`debug_closure_helpers`, rust-lang #117729)
# and fail to compile on the pinned Rust 1.77.2 floor / the installed 1.91.1
# stable. Additionally tauri 2.9.5's own `specta` feature emits
# `#[specta(rename=...)]` on a container, which specta rc.25 rejects outright.
# The highest specta that compiles on stable is rc.23; tauri-specta rc.21 pins
# specta rc.22 and works with tauri 2.9's `specta` feature. This is the verified
# working combo — see docs plan Task 1/2 "OBSERVED GROUND TRUTH".
specta = { version = "=2.0.0-rc.22", features = ["derive", "uuid", "chrono"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
specta-typescript = "=0.0.9"

# Audio
hound = "3.5"                      # WAV read/write
cpal = "0.15"                      # Cross-platform audio recording

# MIDI
midly = "0.5"                      # MIDI file handling

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"                      # File hashing
hex = "0.4"                        # Hex encoding
csv = "1"                          # AVP benchmark annotation CSV parsing
dirs = "5.0"                       # App data directories
thiserror = "2.0"                  # Error handling

# Async
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs"] }

# FFT/DSP analysis (for onset detection)
realfft = "3.4"                    # FFT for spectral flux

[dev-dependencies]
tempfile = "3.8"                   # Temporary files for tests

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
